--- a/index.html
+++ b/index.html
@@ -18,6 +18,42 @@
                 <p id="image-credits">Photo by <a href="https://unsplash.com/@chuckfortner">Chuck Fortner</a> on <a href="https://unsplash.com/">Unsplash.</a></p>
             </div>
         </div>
+        <div id="main-content">
+            <div>
+                <p>
+                    Whether you're a casual gamer who enjoys a casual game of Tetris while waiting for the bus, 
+                    or a hardcore enthusiast who has mastered the art of living off energy drinks and instant noodles, 
+                    we've got a spot for you in our gaming hall of fame.
+                </p>
+                <p>
+                    Sign up now and start connecting with people who understand the true meaning of "just one more game."
+                </p>
+            </div>
+            <div>
+                <div id="form-section">
+                    <p>LFG? Join the fight!</p>
+                    <form>
+                        <label for="gamertag">Gamertag</label>
+                        <input type="text" id="gamertag" name="gamertag" placeholder="xXDeathKiller420Xx">
+                        <label for="first-name">First Name</label>
+                        <input type="text" id="first-name" name="first-name" placeholder="Rick">
+                        <label for="email">E-mail</label>
+                        <input type="email" id="email" name="email" placeholder="rick.n00b_slayer69@yahoo.com">
+                        <label for="discord">Discord</label>
+                        <input type="text" id="discord" name="discord" placeholder="rickiscool">
+                        <label for="password">Password</label>
+                        <input type="password" id="password" name="password">
+                        <label for="confirm-password">Confirm Password</label>
+                        <input type="password" id="confirm-password" name="confirm-password">
+                    </form>
+                </div>
+                <div>
+                    <input type="submit" value="Squad Up Now!">
+                    <p>Already joined? <a href="">Log in!</a></p>
+                    <p>Thank you for checking this website out!<br>-by austernotus 🐧</p>
+                </div>
+            </div>
+        </div>
     </div>
     
 </body>
