--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
         <div id="sidebar">
             <div id ="header">
                 <img src="/media/samusHelm_Logo.gif">
-                <h1 id ="logo-text">
-                    GO-NEXT
-                </h1>
-                <p id="image-credits">Photo by <a href="https://unsplash.com/@chuckfortner">Chuck Fortner</a> on <a href="https://unsplash.com/">Unsplash.</a></p>
+                <h1 id ="logo-text">GO-NEXT!</h1>
             </div>
+            <p id="image-credits">Photo by <a href="https://unsplash.com/@chuckfortner">Chuck Fortner</a> on <a href="https://unsplash.com/">Unsplash.</a></p>
         </div>
         <div id="main-content">
             <div>
