started main-content section css, basic flex

--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
                         <input type="password" id="confirm-password" name="confirm-password">
                     </form>
                 </div>
-                <div>
+                <div id="submit-section">
                     <input type="submit" value="Squad Up Now!">
                     <p>Already joined? <a href="">Log in!</a></p>
-                    <p>Thank you for checking this website out!<br>-by austernotus 🐧</p>
                 </div>
+                <p>Thank you for checking this website out!<br>-by austernotus 🐧</p>
+                <p><em>P.S.: This is NOT an actual service, just a mockup.</em></p>
             </div>
         </div>
     </div>
