changed main text, added new font, fixed wrapping and padding

--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
             <p id="image-credits">Photo by <a href="https://unsplash.com/@chuckfortner">Chuck Fortner</a> on <a href="https://unsplash.com/">Unsplash.</a></p>
         </div>
         <div id="main-content">
-            <div>
+            <div id="main-text">
                 <p>
-                    Whether you're a casual gamer who enjoys a casual game of Tetris while waiting for the bus, 
-                    or a hardcore enthusiast who has mastered the art of living off energy drinks and instant noodles, 
-                    we've got a spot for you in our gaming hall of fame.
+                    Casual Tetris Player?<br> Hardcore enthusiast who has mastered the art of living off energy drinks and instant noodles?<br> 
+                    We've got a spot for you in our gaming hall of fame.
                 </p>
                 <p>
                     Sign up now and start connecting with people who understand the true meaning of "just one more game."
@@ -49,8 +48,10 @@
                     <input type="submit" value="Squad Up Now!">
                     <p>Already joined? <a href="">Log in!</a></p>
                 </div>
-                <p>Thank you for checking this website out!<br>-by austernotus 🐧</p>
-                <p><em>P.S.: This is NOT an actual service, just a mockup.</em></p>
+                <div id="footer">
+                    <p>Thank you for checking this website out!<br>-by austernotus 🐧</p>
+                    <p><em>P.S.: This is NOT an actual service, just a mockup.</em></p>
+                </div>
             </div>
         </div>
     </div>
