--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
         </div>
         <div id="main-content">
             <div id="main-text">
-                <p>
-                    Casual Tetris Player?<br> Hardcore enthusiast who has mastered the art of living off energy drinks and instant noodles?<br> 
+                <p><strong>Casual Tetris Player?</strong><br><strong>Hardcore enthusiast</strong> who has mastered the art of living off energy drinks and instant noodles?<br> 
                     We've got a spot for you in our gaming hall of fame.
                 </p>
                 <p>
-                    Sign up now and start connecting with people who understand the true meaning of "just one more game."
+                    Sign up now and start connecting with people who understand the true meaning of <strong>"just one more game"</strong>.
                 </p>
             </div>
             <div>
@@ -49,7 +48,7 @@
                     <p>Already joined? <a href="">Log in!</a></p>
                 </div>
                 <div id="footer">
-                    <p>Thank you for checking this website out!<br>-by austernotus 🐧</p>
+                    <p>Thank you for checking this website out!<br>-by <a href="https://github.com/austernotus">austernotus 🐧</a></p>
                     <p><em>P.S.: This is NOT an actual service, just a mockup.</em></p>
                 </div>
             </div>
