formatted form into flex with 2 columns, changed some padding

--- a/index.html
+++ b/index.html
@@ -22,25 +22,29 @@
                     We've got a spot for you in our gaming hall of fame.
                 </p>
                 <p>
-                    Sign up now and start connecting with people who understand the true meaning of <strong>"just one more game"</strong>.
+                    <strong>Sign up now</strong> and start connecting with people who understand the true meaning of <strong>"just one more game"</strong>.
                 </p>
             </div>
             <div>
                 <div id="form-section">
                     <p>LFG? Join the fight!</p>
                     <form>
-                        <label for="gamertag">Gamertag</label>
-                        <input type="text" id="gamertag" name="gamertag" placeholder="xXDeathKiller420Xx">
-                        <label for="first-name">First Name</label>
-                        <input type="text" id="first-name" name="first-name" placeholder="Rick">
-                        <label for="email">E-mail</label>
-                        <input type="email" id="email" name="email" placeholder="rick.n00b_slayer69@yahoo.com">
-                        <label for="discord">Discord</label>
-                        <input type="text" id="discord" name="discord" placeholder="rickiscool">
-                        <label for="password">Password</label>
-                        <input type="password" id="password" name="password">
-                        <label for="confirm-password">Confirm Password</label>
-                        <input type="password" id="confirm-password" name="confirm-password">
+                        <div id="first-column">
+                            <label for="gamertag">Gamertag</label>
+                            <input type="text" id="gamertag" name="gamertag" placeholder="xXDeathKiller420Xx">
+                            <label for="email">E-mail</label>
+                            <input type="email" id="email" name="email" placeholder="rick.n00b_slayer69@yahoo.com">
+                            <label for="password">Password</label>
+                            <input type="password" id="password" name="password">
+                        </div>
+                        <div id="second-column">
+                            <label for="first-name">First Name</label>
+                            <input type="text" id="first-name" name="first-name" placeholder="Rick">
+                            <label for="discord">Discord</label>
+                            <input type="text" id="discord" name="discord" placeholder="rickiscool">
+                            <label for="confirm-password">Confirm Password</label>
+                            <input type="password" id="confirm-password" name="confirm-password">
+                        </div>
                     </form>
                 </div>
                 <div id="submit-section">
