changed footer, font-sizes, added radial gradient bg, focus and invalid selectors, responsive max-width

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                     <input type="submit" value="Squad Up Now!">
                     <p>Already joined? <a href="">Log in!</a></p>
                 </div>
-                <div id="footer">
-                    <p>Thank you for checking this website out!<br>-by <a href="https://github.com/austernotus">austernotus 🐧</a></p>
-                    <p><em>P.S.: This is NOT an actual service, just a mockup.</em></p>
-                </div>
+            </div>
+            <div id="footer">
+                <p>Thank you for checking this website out! -by <a href="https://github.com/austernotus">austernotus 🐧</a></p>
+                <p><em>P.S.: This is NOT an actual service, just a mockup.</em></p>
             </div>
         </div>
     </div>
