--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="sidebar">
             <div id ="header">
-                <img src="form/media/samusHelm_Logo.gif">
+                <img src="./media/samusHelm_Logo.gif">
                 <h1 id ="logo-text">GO-NEXT!</h1>
             </div>
             <p id="image-credits">Photo by <a href="https://unsplash.com/@chuckfortner">Chuck Fortner</a> on <a href="https://unsplash.com/">Unsplash.</a></p>
